# iBeatles

./: .gitignore  .gitignore~  .gitmodules  .pre-commit-config.yaml  .travis.yml  10_InconelPowder_1.5Hrs_Corrected_normalized_bin#2.json  MANIFEST.in  Ni_normalized_bin#168.json  Ni_normalized_bin#73.json  README.md  README.md~  environment.yml  environment_old.yml  install_me.py  pyproject.toml  requirements.txt  requirements.yml  run_tests  setup.cfg  setup.py
.ci/: environment_py35.yml  environment_py36.yml
.github/workflows/: main.yml  unittest.yml
conda.recipe/: meta.yaml
designer/: ui_addElement.ui  ui_advancedFittingSelection.ui  ui_binningWindow.ui  ui_fittingSetVariables.ui  ui_fittingStoryTable.ui  ui_fittingWindow.ui  ui_mainWindow.ui  ui_mainWindow.ui.autosave  ui_roiEditor.ui  ui_rotateImages.ui  ui_strainMapping.ui  ui_time_spectra_preview.ui
docs/: Fitting equations .pptx  ~$Fitting equations .pptx
iBeatles/: __init__.py  __main__.py
iBeatles.egg-info/: PKG-INFO  SOURCES.txt
iBeatles/binning/: binning_launcher.py
iBeatles/fitting/: display.py  fitting_launcher.py  get.py  initialization.py  initialization_sigma_alpha.py  selected_bin_handler.py  set_fitting_variables_launcher.py  value_table_handler.py
iBeatles/interfaces/: mplwidget.py
iBeatles/session/: general.py  save_tab.py  (+3 more)
ibeatles/: __init__.py  __main__.py  _version.py  config.json  iBeatles.py  load_images.py
icons/: icons.qrc  icons_rc.py
notebooks/: batch_bragg_edge_fitting.py  bragg_edge_fitting.ipynb  ibeatles_cli_step_by_step.py
scripts/: iBeatles  ibeatles  run.py
(+570 files in other folders)
