; [bdist]
; formats = rpm
;
; [bdist_rpm]
; requires = python, numpy, PyQt4
; build_requires = python, python-setuptools, PyQt4

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[flake8]
exclude = src/iBeatles/icons/icons_rc.py,
          versioneer.py
doctests = True
max-line-length = 130

[versioneer]
VCS = git
style = pep440
versionfile_source = src/iBeatles/_version.py
versionfile_build = None
tag_prefix =

[metadata]
name = iBeatles
version = 1.0.0
author = Jean Bilheux
author_email = bilheuxjm@ornl.gov
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.packages.find]
where = .